fix: vulnerability fixes according to sonarqube